--- a/index.html
+++ b/index.html
@@ -65,20 +65,251 @@
                 <p class="advantages__pre-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque aliquam odio et faucibus. Nulla rhoncus feugiat eros quis consectetur.</p>
                 <ul class="advantages__list list">
                     <li class="advantages__item">
+                        <svg class="advantages-icon" width="64" height="64">
+                            <use href="./images/icons.svg#icon-bed-icon"></use>
+                          </svg>
                         <p class="advantages__item-title">Beds</p>
                         <p class="advantages__item-text">The cabin is equipped with 12 beds, 4 of which are in bunk. The rent includes linens for all beds.</p>
                     </li>
                     <li class="advantages__item">
+                        <svg class="advantages-icon" width="64" height="64">
+                            <use href="./images/icons.svg#icon-combined-shape-icon"></use>
+                          </svg>
                         <p class="advantages__item-title">Bedrooms</p>
                         <p class="advantages__item-text">Spread out over two floors, the cabin offers 4 bedrooms. Ranging from 2 to 4 beds per room.</p>
                     </li>
                     <li class="advantages__item">
+                        <svg class="advantages-icon" width="64" height="64">
+                            <use href="./images/icons.svg#icon-bath-tub-icon"></use>
+                          </svg>
                         <p class="advantages__item-title">Bathrooms</p>
                         <p class="advantages__item-text">The cabin has three bathrooms, all equipped with showers and one with a bath tub,</p>
                     </li>
                 </ul>
             </div>
         </section>
-    </main>
+
+        <section class="privilege">
+            <div class="container">
+                <h2 class="visually-hidden">Privilege</h2>
+                <h3 class="privilege__title">The perfect escape.</h3>
+                <p class="privilege__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque aliquam odio et faucibus. Nulla rhoncus feugiat eros quis consectetur.</p>
+                <ul class="privilege__list list">
+
+                    <li class="privilege__item">
+                        <svg class="privilege-icon" width="36" height="36">
+                            <use href="./images/icons.svg#icon-stove-icon"></use>
+                        </svg>
+                        <div class="privilege__item-container">
+                            <p class="privilege__item-text">Modern Kitchen Appliances</p>
+                            <p class="privilege__item-text privilege__item-text--dark">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        </div>
+                    </li>
+
+                    <li class="privilege__item">
+                        <svg class="privilege-icon" width="36" height="36">
+                            <use href="./images/icons.svg#icon-trees-icon"></use>
+                        </svg>
+                        <div class="privilege__item-container">
+                            <p class="privilege__item-text">Outdoor Paths</p>
+                            <p class="privilege__item-text privilege__item-text--dark">Nulla rhoncus feugiat eros quis consectetur.</p>
+                        </div>
+                    </li>
+
+                    <li class="privilege__item">
+                        <svg class="privilege-icon" width="36" height="36">
+                            <use href="./images/icons.svg#icon-shape-icon"></use>
+                        </svg>
+                        <div class="privilege__item-container">
+                            <p class="privilege__item-text">Coffee Maker</p>
+                            <p class="privilege__item-text privilege__item-text--dark">Vestibulum sit amet urna turpis. Mauris euismod elit et nisi ultrices, ut faucibus orci tincidunt.</p>
+                        </div>
+                    </li>
+
+                    <li class="privilege__item">
+                        <svg class="privilege-icon" width="36" height="36">
+                            <use href="./images/icons.svg#icon-forest-icon"></use>
+                        </svg>
+                        <div class="privilege__item-container">
+                            <p class="privilege__item-text">Natural Scenery</p>
+                            <p class="privilege__item-text privilege__item-text--dark">Cras commodo consequat orci, in convallis risus egestas non.</p>
+                        </div>
+                    </li>
+
+                    <li class="privilege__item">
+                        <svg class="privilege-icon" width="36" height="36">
+                            <use href="./images/icons.svg#icon-air-conditioner-icon"></use>
+                        </svg>
+                        <div class="privilege__item-container">
+                            <p class="privilege__item-text">Air Conditioner</p>
+                            <p class="privilege__item-text privilege__item-text--dark">Nullam scelerisque aliquam odio et faucibus.</p>
+                        </div>
+                    </li>
+
+                    <li class="privilege__item">
+                        <svg class="privilege-icon" width="36" height="36">
+                            <use href="./images/icons.svg#icon-shape-icon1"></use>
+                        </svg>
+                        <div class="privilege__item-container">
+                            <p class="privilege__item-text">Storage Solutions</p>
+                            <p class="privilege__item-text privilege__item-text--dark">Morbi neque ex, condimentum dapibus congue et, vulputate ut ligula.</p>
+                        </div>
+                    </li>
+
+                    <li class="privilege__item">
+                        <svg class="privilege-icon" width="36" height="36">
+                            <use href="./images/icons.svg#icon-glass-icon"></use>
+                        </svg>
+                        <div class="privilege__item-container">
+                            <p class="privilege__item-text">Cutlery Selection</p>
+                            <p class="privilege__item-text privilege__item-text--dark">Duis tristique sed lorem a vestibulum.</p>
+                        </div>
+                    </li>
+
+                    <li class="privilege__item">
+                        <svg class="privilege-icon" width="36" height="36">
+                            <use href="./images/icons.svg#icon-pizza-icon"></use>
+                        </svg>
+                        <div class="privilege__item-container">
+                            <p class="privilege__item-text">Take-away Options</p>
+                            <p class="privilege__item-text privilege__item-text--dark">Nulla efficitur auctor hendrerit. Etiam ut orci varius, faucibus libero ac, cursus quam.</p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </section>    
+
+        <section class="reviews">
+            <div class="container">
+                <h2 class="visually-hidden">Reviews</h2>
+                <h3 class="reviews__title">Past guests.</h3>
+                <p class="reviews__pre-title">Don't take our word for it! Have a look at what our previous guests say about their stay at the Guest House.</p>
+                <ul class="reviews__list list">
+
+                    <li class="reviews__item">
+                        <div class="reviews__stars">
+                            <svg class="reviews-icon" width="18" height="18">
+                                <use href="./images/icons.svg#icon-star-icon"></use>
+                            </svg>
+                            <svg class="reviews-icon" width="18" height="18">
+                                <use href="./images/icons.svg#icon-star-icon"></use>
+                            </svg>
+                            <svg class="reviews-icon" width="18" height="18">
+                                <use href="./images/icons.svg#icon-star-icon"></use>
+                            </svg>
+                            <svg class="reviews-icon" width="18" height="18">
+                                <use href="./images/icons.svg#icon-star-icon"></use>
+                            </svg>
+                            <svg class="reviews-icon" width="18" height="18">
+                                <use href="./images/icons.svg#icon-star-icon"></use>
+                            </svg>
+                        </div>
+                        <p class="reviews__pre-text">We had an amazing stay at the Guest House!</p>
+                        <p class="reviews__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+                        <p class="reviews__user">Nate Davidsson</p>
+                    </li>
+
+                    <li class="reviews__item">
+                        <div class="reviews__stars">
+                            <svg class="reviews-icon" width="18" height="18">
+                                <use href="./images/icons.svg#icon-star-icon"></use>
+                            </svg>
+                            <svg class="reviews-icon" width="18" height="18">
+                                <use href="./images/icons.svg#icon-star-icon"></use>
+                            </svg>
+                            <svg class="reviews-icon" width="18" height="18">
+                                <use href="./images/icons.svg#icon-star-icon"></use>
+                            </svg>
+                            <svg class="reviews-icon" width="18" height="18">
+                                <use href="./images/icons.svg#icon-star-icon"></use>
+                            </svg>
+                            <svg class="reviews-icon" width="18" height="18">
+                                <use href="./images/icons.svg#icon-star-outline-icon"></use>
+                            </svg>
+                        </div>
+                        <p class="reviews__pre-text">Beautiful little hideaway.</p>
+                        <p class="reviews__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet.</p>
+                        <p class="reviews__user">Laura Paulie</p>
+                    </li>
+
+                    <li class="reviews__item">
+                        <div class="reviews__stars">
+                            <svg class="reviews-icon" width="18" height="18">
+                                <use href="./images/icons.svg#icon-star-icon"></use>
+                            </svg>
+                            <svg class="reviews-icon" width="18" height="18">
+                                <use href="./images/icons.svg#icon-star-icon"></use>
+                            </svg>
+                            <svg class="reviews-icon" width="18" height="18">
+                                <use href="./images/icons.svg#icon-star-icon"></use>
+                            </svg>
+                            <svg class="reviews-icon" width="18" height="18">
+                                <use href="./images/icons.svg#icon-star-icon"></use>
+                            </svg>
+                            <svg class="reviews-icon" width="18" height="18">
+                                <use href="./images/icons.svg#icon-star-icon"></use>
+                            </svg>
+                        </div>
+                        <p class="reviews__pre-text">Best vacation ever!</p>
+                        <p class="reviews__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</p>
+                        <p class="reviews__user">Greg Todd</p>
+                    </li>
+                </ul>
+                <div class="reviews-circle">
+                    <svg class="reviews-icon-circle" width="60" height="60">
+                        <use href="./images/icons.svg#icon-circle-icon"></use>
+                    </svg>
+                    <svg class="reviews-icon-circle" width="60" height="60">
+                        <use href="./images/icons.svg#icon-circle-icon"></use>
+                    </svg>
+                </div>
+            </div>
+        </section>
+
+        <section class="box-img">
+            <img src="./images/frame.jpg" alt="room">
+        </section>
+
+        <section class="slogan">
+            <div class="container slogan__flex">
+                <h2 class="visually-hidden">Slogan</h2>
+                <div class="slogan__container">
+                    <h3 class="slogan__title">Come together.</h3>
+                    <p class="slogan__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque aliquam odio et faucibus.</p>
+                </div>
+                <ul class="slogan__list list">
+                    <li class="slogan__item">
+                        <svg class="slogan-icon" width="36" height="36">
+                            <use href="./images/icons.svg#icon-wi-fi-icon"></use>
+                        </svg>
+                        <p class="slogan__item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    </li>
+                   
+                    <li class="slogan__item">
+                        <svg class="slogan-icon" width="36" height="36">
+                            <use href="./images/icons.svg#icon-bread-icon"></use>
+                        </svg>
+                        <p class="slogan__item-text slogan__item-text--big">Nullam scelerisque aliquam odio et faucibus.</p>
+                    </li> 
+
+                    <li class="slogan__item">
+                        <svg class="slogan-icon" width="36" height="36">
+                            <use href="./images/icons.svg#icon-hanger-icon"></use>
+                        </svg>
+                        <p class="slogan__item-text">Nulla rhoncus feugiat eros quis consectetur.</p>
+                    </li>
+
+                    <li class="slogan__item">
+                        <svg class="slogan-icon" width="36" height="36">
+                            <use href="./images/icons.svg#icon-cutlery-icon"></use>
+                        </svg>
+                        <p class="slogan__item-text">Morbi neque ex, condimentum.</p>
+                    </li>
+                </ul>
+            </div>
+        </section>
+
+
+</main>
 </body>
 </html>
