--- a/index.html
+++ b/index.html
@@ -258,12 +258,8 @@
                     </li>
                 </ul>
                 <div class="reviews-circle">
-                    <svg class="reviews-icon-circle" width="60" height="60">
-                        <use href="./images/icons.svg#icon-circle-icon"></use>
-                    </svg>
-                    <svg class="reviews-icon-circle" width="60" height="60">
-                        <use href="./images/icons.svg#icon-circle-icon"></use>
-                    </svg>
+                    <button type="button" class="right"></button>
+                    <button type="button" class="left"></button>
                 </div>
             </div>
         </section>
@@ -417,9 +413,8 @@
               >
             </li>
         </ul>    
-
     </div>
 </footer>
-
+<script src="./script.js"></script>
 </body>
 </html>
