--- a/index.html
+++ b/index.html
@@ -256,10 +256,11 @@
                         <p class="reviews__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</p>
                         <p class="reviews__user">Greg Todd</p>
                     </li>
+                    
                 </ul>
                 <div class="reviews-circle">
-                    <button type="button" class="right"></button>
-                    <button type="button" class="left"></button>
+                    <button type="button" class="reviews__btn-right"></button>
+                    <button type="button" class="reviews__btn-left"></button>
                 </div>
             </div>
         </section>
